add swagger doc template to each controller
