# app/controllers/orders/create.go
@@ -1,0 +1,10 @@
+package orders
+
+import (
+	"github.com/labstack/echo/v4"
+)
+
+//	@Tags		Order_Create
+//	@Success	200	{string}	string
+//	@Router		/orders/{id} [post]
+func OrderCreate(c echo.Context) error { return nil }
